--- a/ILab_second_year/Operations_On_Polygons/CMakeLists.txt
+++ b/ILab_second_year/Operations_On_Polygons/CMakeLists.txt
@@ -1,6 +1,12 @@
 cmake_minimum_required(VERSION 3.14)
-project(Count_Intersection_Area_Of_Triangle)
+project(intersect)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Count_Intersection_Area_Of_Triangle main.cpp Work_w_Polygon.hpp Work_w_Polygon.h BSPTree.hpp BSPTree.h line_2d.hpp line_2d.h)
+set(Pivotal_Class_For_Polyogns Work_w_Polygon.hpp Work_w_Polygon.h)
+
+set(BSPSource BSPTree.hpp BSPTree.h)
+
+set(line_class line_2d.hpp line_2d.h)
+
+add_executable(intersect main.cpp ${Pivotal_Class_For_Polygons} ${BSPSource} ${line_class})
